// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel expect to render 1`] = `
<div
  className="ais-Panel"
>
  <div
    className="ais-Panel-body"
  >
    <ContextProvider
      value={[Function]}
    >
      <div>
        Hello content
      </div>
    </ContextProvider>
  </div>
</div>
`;

exports[`Panel expect to render when setCanRefine is called 1`] = `
<Panel
  className=""
  footer={null}
  header={null}
>
  <div
    className="ais-Panel"
  >
    <div
      className="ais-Panel-body"
    >
      <button
        onClick={[Function]}
      >
        call setCanRefine
      </button>
    </div>
  </div>
</Panel>
`;

exports[`Panel expect to render when setCanRefine is called 2`] = `
<Panel
  className=""
  footer={null}
  header={null}
>
  <div
    className="ais-Panel ais-Panel--noRefinement"
  >
    <div
      className="ais-Panel-body"
    >
      <button
        onClick={[Function]}
      >
        call setCanRefine
      </button>
    </div>
  </div>
</Panel>
`;

exports[`Panel expect to render with custom className 1`] = `
<div
  className="ais-Panel ais-Panel-Breadcrumb"
>
  <div
    className="ais-Panel-body"
  >
    <ContextProvider
      value={[Function]}
    >
      <div>
        Hello content
      </div>
    </ContextProvider>
  </div>
</div>
`;

exports[`Panel expect to render with footer 1`] = `
<div
  className="ais-Panel"
>
  <div
    className="ais-Panel-body"
  >
    <ContextProvider
      value={[Function]}
    >
      <div>
        Hello content
      </div>
    </ContextProvider>
  </div>
  <div
    className="ais-Panel-footer"
  >
    <p>
      Footer
    </p>
  </div>
</div>
`;

exports[`Panel expect to render with header 1`] = `
<div
  className="ais-Panel"
>
  <div
    className="ais-Panel-header"
  >
    <p>
      Header
    </p>
  </div>
  <div
    className="ais-Panel-body"
  >
    <ContextProvider
      value={[Function]}
    >
      <div>
        Hello content
      </div>
    </ContextProvider>
  </div>
</div>
`;

exports[`Panel expect to render without refinement 1`] = `
<div
  className="ais-Panel ais-Panel--noRefinement"
>
  <div
    className="ais-Panel-body"
  >
    <ContextProvider
      value={[Function]}
    >
      <div>
        Hello content
      </div>
    </ContextProvider>
  </div>
</div>
`;
